rearranged some sconscripts stuff added some comments to sconscripts

--- a/src/Compiler/Lexer_Parser/SConscript
+++ b/src/Compiler/Lexer_Parser/SConscript
@@ -1,6 +1,8 @@
 Import('env Lemon Lempar')
 
 #flex lexer
+FlexBuilder = Builder(action = 'flex -o $TARGET $SOURCE')
+env['BUILDERS']['Flex'] = FlexBuilder
 env.Flex('LangLexer.c', 'LangLexer.l')
 
 #setup lemon in local directory
