--- a/src/Interpreter/SConscript
+++ b/src/Interpreter/SConscript
@@ -1,6 +1,7 @@
 Import('env')
 
+InterpreterCommonLib = env.Library('InterpreterCommonLib', 'common.c')
 env.Library('InterpreterLib', 'interpreter.c', LIBS=['InstructionLib'])#, CPPPATH=['.'])
 
-env.Program('Interpreter', 'InterpreterMain.c', LIBS=['InterpreterLib', 'InstructionLib'])
-env.Program('Disassembler', 'disassembler.c', LIBS=['InstructionLib'])
+env.Program('Interpreter', 'InterpreterMain.c', LIBS=['InterpreterLib', 'InstructionLib', 'InterpreterCommonLib'])
+env.Program('Disassembler', 'disassembler.c', LIBS=['InstructionLib', 'InterpreterCommonLib'])
