--- a/src/Compiler/Tools/SConscript
+++ b/src/Compiler/Tools/SConscript
@@ -1,6 +1,6 @@
 Import('env')
-
-Lemon = env.Program('lemon.c')
+print "qwerty"
+Lemon = env.Program('lemon','lemon.c')
 Lempar = env.File('lempar.c')
 
 Return('Lemon Lempar')
